# CalBot

./: Cargo.toml  README.md  groq-output.txt
src/: events.rs  ics-format.ics  ics-format.txt  llm-prompt.txt  main.rs  parser.rs  utils.rs
