[package]
name = "cal-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
icalendar = "0.16.11"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["full", "macros", "rt-multi-thread"] }
